Fixed handling of repositories in some service classes (#13510)